<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="1.5dp"
        android:text="@string/task_name"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:maxLines="3"
        android:gravity="bottom" />
    <TextView
        android:id="@+id/task_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"
        android:paddingTop="1.5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/task_contact"
        android:textSize="14sp"
        android:maxLines="3" />
    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_recipient"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="9dp"
        android:paddingBottom="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/due_date"
        android:textSize="14sp"
        android:maxLines="3"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/task_contact"
        android:src="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

</RelativeLayout>