<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/app_grad_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sellulose.app.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:shadowColor="#505050"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="8.0"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/load_name"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:shadowColor="#505050"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="8.0"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/load_email"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:shadowColor="#505050"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="8.0"
                android:gravity="top" />
            <TextView
                android:id="@+id/text_plan"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@android:color/white"
                android:layout_marginTop="6dp"
                android:paddingBottom="3dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="3dp"
                android:text="@string/load_plan"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_main"
        android:scrollbars="vertical" />


</RelativeLayout>
